--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./server.js",
   "scripts": {
-    "start": "node ./server.js",
-    "dev": "nodemon",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -26,6 +26,7 @@
     "luxon": "^3.4.4",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
     "pm2": "^5.4.0",
     "winston": "^3.13.0"
   },
