--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "eslint": "^9.4.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "express-validator": "^7.1.0",
@@ -31,11 +30,16 @@
     "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "@shelf/jest-mongodb": "^4.3.2",
+    "eslint": "^9.4.0",
+    "globals": "^15.4.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.3",
     "supertest": "^7.0.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "preset": "@shelf/jest-mongodb"
   }
 }
