--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "movie-reservation-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "a movie reservation api",
   "main": "./server.js",
+  "type": "module",
   "scripts": {
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
@@ -19,24 +20,29 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
-    "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
-    "joi": "^17.13.1",
     "luxon": "^3.4.4",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "pm2": "^5.4.0",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "@shelf/jest-mongodb": "^4.3.2",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^22.8.7",
     "eslint": "^9.4.0",
     "globals": "^15.4.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.3",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "typescript": "^5.6.3"
   },
   "jest": {
     "testEnvironment": "node",
